<resources>
    <string name="app_name">PublicApp</string>
    <string name="AceitarTermo">Aceito os termos e condições.</string>
    <string name="Entrar">Entrar</string>
    <string name="NaoTemCadastro">Ainda não tenho Cadastro</string>
    <string name="descricaoImgLogo">LOGO APP</string>
    <string name="Email">E-mail</string>
    <string name="Senha">Senha</string>
    <string name="login">LOGIN</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="novousuario">Novo Usuário</string>
    <string name="digiteseuemail">Digite Seu e-mail:</string>
    <string name="digiteumasenha">Digite uma Senha:</string>
    <string name="confirmeasenha">Confirme a senha:</string>
    <string name="digiteasenhanovamente">Digite a Senha Novamente</string>
    <string name="voltar">Voltar</string>
    <string name="deslogar">SAIR</string>
    <string name="esquecisenha">Esqueci Senha</string>
    <string name="facebook_app_id">833853813724203</string>
    <string name="fb_login_protocol_scheme">fb833853813724203</string>
    <string name="loginfacebook">Usar Conta do Facebook</string>
    <string name="logingoogle">Usar conta do Google</string>

</resources>
