<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo03" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/novousuario"
        android:textSize="@dimen/txt_padrao"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/digiteseuemail"
        android:textSize="@dimen/txt_padrao"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtxt_emailCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/digiteumasenha"
        android:textSize="@dimen/txt_padrao"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_emailCadastro"
        app:layout_constraintStart_toStartOf="@+id/edtxt_emailCadastro"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_emailCadastro" />

    <EditText
        android:id="@+id/edtxt_pwdCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirmeasenha"
        android:textSize="@dimen/txt_padrao"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_pwdCadastro"
        app:layout_constraintStart_toStartOf="@+id/edtxt_pwdCadastro"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_pwdCadastro" />

    <EditText
        android:id="@+id/edtxt_pwdConfirmacaocadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/digiteasenhanovamente"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_novocadastrodeusuario"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_pwdConfirmacaocadastro"
        app:layout_constraintStart_toStartOf="@+id/edtxt_pwdConfirmacaocadastro"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_pwdConfirmacaocadastro" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/voltar"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_novocadastrodeusuario"
        app:layout_constraintStart_toStartOf="@+id/btn_novocadastrodeusuario"
        app:layout_constraintTop_toBottomOf="@+id/btn_novocadastrodeusuario" />


</androidx.constraintlayout.widget.ConstraintLayout>