<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/descricaoImgLogo"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo03" />

    <EditText
        android:id="@+id/edtxt_emaillogin"
        android:layout_width="@dimen/LoginEmail"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:paddingLeft="8dp"/>

    <EditText
        android:id="@+id/edtxt_senhalogin"
        android:layout_width="@dimen/LoginEmail"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/Senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_emaillogin"
        app:layout_constraintStart_toStartOf="@+id/edtxt_emaillogin"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_emaillogin"
        android:paddingLeft="8dp"/>

    <!-- android:importantForAutofill="no"  -verificar essa instrução depois-->

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/AceitarTermo"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_senhalogin"
        app:layout_constraintStart_toStartOf="@+id/edtxt_senhalogin"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_senhalogin"
        />

    <Button
        android:id="@+id/btnlogar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Entrar"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        android:background="@drawable/bg_button_rounded"
        android:textColor="@color/branco"/>

</androidx.constraintlayout.widget.ConstraintLayout>